--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,13 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=50
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 management.endpoints.web.exposure.include=mappings
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
